--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser": "2.2.3",
     "@angular/platform-browser-dynamic": "2.2.3",
     "@angular/router": "3.2.3",
+    "angular2-notifications": "^0.4.48",
     "core-js": "^2.4.1",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.0.2",
     "ts-helpers": "^1.1.1",
+    "tslint": "^4.1.1",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
